--- a/src/pages/booking/booking.scss
+++ b/src/pages/booking/booking.scss
@@ -9,7 +9,59 @@
         text-align: center;
         padding: 1rem;
     }
+    .form_of_booking_page{
+        padding: 1rem;
+        width: 600px;
+        background-color: #ccc;
+        border-radius: 12px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        #close_form_of_booking_page,
+        #close_form_edit_of_booking_page{
+            width: 24px;
+            height: 24px;
+            padding: 4px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 4px;
+            border-width: 0;
+            margin-left: calc(100% - 24px);
+            cursor: pointer;
+            p{
+                font-size: 14px;
+            }
+        }
+        .title_form_of_booking_page{
+            font-weight: bold;
+            text-align: center;
+        }
+        form{
+            padding: 1rem;
+            height: 400px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            p{
+                margin-bottom: .3rem;
+            }
+            input{
+                margin-bottom: 1rem;
+            }
+            select{
+                margin-bottom: 1rem;
+            }
+            #btn_submit_form_of_booking_page{
+                width: fit-content;
+                padding: 4px;
+                margin-top: 1rem;
+            }
 
+        }
+    }
     .booking_add_button{
         padding: 1rem 0;
         display: flex;
@@ -32,60 +84,13 @@
             margin-left: 1rem;
         }
 
-        .active_form_create_new_booking{
+        .active_form_of_booking_page,
+        .active_form_edit_of_booking_page{
             display: block;
         }
-        .hide_form_create_new_booking{
+        .hide_form_of_booking_page,
+        .hide_form_edit_of_booking_page{
             display: none;
-        }
-        .form_create_new_booking{
-            padding: 1rem;
-            width: 600px;
-            background-color: #ccc;
-            border-radius: 12px;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%,-50%);
-            #close_form_create_new_booking{
-                width: 24px;
-                height: 24px;
-                padding: 4px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                border-radius: 4px;
-                border-width: 0;
-                margin-left: calc(100% - 24px);
-                cursor: pointer;
-                p{
-                    font-size: 14px;
-                }
-            }
-            .title_form_create_new_booking{
-                font-weight: bold;
-                text-align: center;
-            }
-            form{
-                padding: 1rem;
-                height: 400px;
-                display: flex;
-                flex-direction: column;
-                justify-content: flex-start;
-                flex-wrap: wrap;
-                p{
-                    margin-bottom: .3rem;
-                }
-                input{
-                    margin-bottom: 1rem;
-                }
-                #btn_submit_form_create_new_booking{
-                    width: fit-content;
-                    padding: 4px;
-                    margin-top: 1rem;
-                }
-
-            }
         }
 
         a{
@@ -96,7 +101,17 @@
     }
 
     .booking_table{
+        .hide_form_edit_of_booking_page{
+            display: none;
+        }
+        .active_form_edit_of_booking_page{
+            display: block;
+        }
         .booking_table_stt{
+            width: 5%;
+            text-align: center;
+        }
+        .booking_table_id{
             width: 5%;
             text-align: center;
         }
@@ -104,31 +119,31 @@
             width: 17%;
         }
         .booking_table_sodienthoai{
-            width: 10%;
+            width: 13%;
         }
-        .booking_table_hovaten{
-            width: 10%;
-        }
-        .booking_table_fileexcel{
-            width: 10%;
-        }
+        // .booking_table_hovaten{
+        //     width: 10%;
+        // }
+        // .booking_table_fileexcel{
+        //     width: 10%;
+        // }
         .booking_table_delivery{
             width: 10%;
         }
         .booking_table_status{
-            width: 9%;
+            width: 12%;
         }
         .booking_table_checkin{
-            width: 9%;
+            width: 10%;
         }
         .booking_table_checkout{
             width: 10%;
         }
         .booking_table_sua{
-            width: 5%;
+            width: 9%;
         }
         .booking_table_xoa{
-            width: 5%;
+            width: 9%;
         }
 
         .booking_table_title{
@@ -158,7 +173,7 @@
                     font-size: 14px;
                 }
                 .booking_table_sua, .booking_table_xoa{
-
+                    
                     button{
                         display: flex;
                         align-items: center;
