--- a/src/Components/Booking/BtnAddNewBooking/BtnAddNewBooking.css
+++ b/src/Components/Booking/BtnAddNewBooking/BtnAddNewBooking.css
@@ -38,3 +38,12 @@
     color: #4a90e2; /* Màu chữ cho tên file */
     font-weight: bold;
 }
+
+.submit-button-add-bk{
+    background-color: #030c16;
+    color: #fff;
+    padding: .2rem 1rem;
+    border-radius: 8px;
+    border-width: 0;
+    margin-top: 8px;
+}
