--- a/src/hello.css
+++ b/src/hello.css
@@ -6,6 +6,9 @@
     font-size: 1rem;
     line-height: 1.5;
 }
+body{
+    position: relative;
+}
 .container{
     width: 100%;
     height: 100vh;
