css responsive navbar, footer

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,7 @@
 .home{
     height: 800px;
     background-color: #262838;
+    position: relative;
     p{
         position: absolute;
         font-size: 40px;
