--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,6 +1,7 @@
 .home {
   height: 800px;
   background-color: #262838;
+  position: relative;
 }
 .home p {
   position: absolute;
@@ -11,4 +12,6 @@
   top: 50%;
   left: 50%;
   transform: translateX(-50%);
-}/*# sourceMappingURL=home.css.map */
+}
+
+/*# sourceMappingURL=home.css.map */
