--- a/src/pages/booking/booking.scss
+++ b/src/pages/booking/booking.scss
@@ -1,8 +1,9 @@
 .booking{
     width: 100%;
-    height: 100vh;
+    height: fit-content;
+    min-height: 100vh;
     background-color: #262838;
-    padding: 0 5rem;
+    padding: 0 5rem 2rem 5rem;
     position: relative;
     .booking_title{
         color: #fff;
