--- a/src/pages/booking/booking.scss
+++ b/src/pages/booking/booking.scss
@@ -191,3 +191,11 @@
         }
     }
 }
+.tss-1qtl85h-MUIDataTableBodyCell-root.tss-1ej321f-MUIDataTableBodyCell-cellHide.tss-1t2q2nr-MUIDataTableBodyCell-stackedHeader.tss-1vd39vz-MUIDataTableBodyCell-stackedCommon {
+    visibility: hidden !important;
+}
+
+// tr{
+//     display: flex !important;
+//     flex-direction: row;
+// }
