--- a/src/Components/Booking/EditBooking/editbooking.css
+++ b/src/Components/Booking/EditBooking/editbooking.css
@@ -7,7 +7,7 @@
     background: rgba(255, 255, 255, 1);
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 0px 100vh rgba(0, 0, 0, 0.7);
     z-index: 1000;
 }
 
@@ -20,11 +20,16 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 1rem;
+    align-items: center;
+    padding: 2px;
 }
 
 .formEditBk label input{
     display: flex;
-    width: 80%;
+    width: 75%;
+    padding: 4px;
+    border-radius: 4px;
+    border: 1px inset;
 }
 
 
