--- a/src/Components/PopupItems/popupitems.css
+++ b/src/Components/PopupItems/popupitems.css
@@ -5,7 +5,7 @@
     transform: translate(-50%, -50%);
     background-color: #262838;
     padding: 20px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 0px 100vh rgba(0, 0, 0, 0.7);
     z-index: 1000;
     width: 75%; /* Chiều rộng cố định */
     max-height: 80vh; /* Đặt chiều cao tối đa cho popup */
