--- a/src/Components/Product/EditProduct/editproduct.css
+++ b/src/Components/Product/EditProduct/editproduct.css
@@ -5,9 +5,9 @@
     transform: translate(-50%, -50%);
     width: 750px;
     background: rgba(255, 255, 255, 1);
-    padding: 20px;
+    padding: 30px;
     border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 0px 100vh rgba(0, 0, 0, 0.7);
     z-index: 1000;
 }
 
@@ -35,6 +35,8 @@
     display: flex;
     width: 60%;
     padding: 8px;
+    border: 1px inset;
+    border-radius: 8px;
 }
 
 
@@ -69,8 +71,17 @@
 .btn-save-edit-bk {
     background-color: #0c3c73 !important;
     color: white;
+    position: absolute;
+    bottom: 12px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .btn-cancel-edit-bk {
-    background-color: #ddd;
+    background-color: transparent !important;
+    color: #000 !important;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
+
