fix bug, chua code them gi ca

--- a/src/Components/Product/Select/selectcomponent.css
+++ b/src/Components/Product/Select/selectcomponent.css
@@ -1,20 +1,20 @@
-.css-1pysi21-MuiFormLabel-root-MuiInputLabel-root {
+.css-1kfabtt-MuiFormLabel-root-MuiInputLabel-root {
     color: #fff !important;
 }
 
-.css-1jy569b-MuiFormLabel-root-MuiInputLabel-root {
+.css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root {
     color: #fff !important;
 }
 
-.css-hfutr2-MuiSvgIcon-root-MuiSelect-icon {
+.css-d551zc-MuiSvgIcon-root-MuiSelect-icon, .css-lohd6h-MuiSvgIcon-root-MuiSelect-icon {
     color: #fff !important;
 }
 
-.css-1yk1gt9-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
+.css-sc8y68-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
     color: #fff !important;
 }
 
-.css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+.css-1ll44ll-MuiOutlinedInput-notchedOutline {
     border-color: #fff !important;
 }
 
